fixed validation error and reformated routes
