# swagger_server/controllers/parser_controller.py
@@ -23,7 +23,7 @@ def read_coverage(project_id, commit_id, coverage_id):  # noqa: E501
     return 'do some magic!'
 
 
-def write_coverage(project_id, commit_id, body=None):  # noqa: E501
+def write_coverage(project_id, commit_id, coverage_id, body=None):  # noqa: E501
     """For Parser to write to DB
 
     Route for Parser to write to DB # noqa: E501
@@ -32,12 +32,13 @@ def write_coverage(project_id, commit_id, body=None):  # noqa: E501
     :type project_id: str
     :param commit_id: pass commit id
     :type commit_id: str
+    :param coverage_id: pass coverage id to get it
+    :type coverage_id: str
     :param body: Commit Object
     :type body: dict | bytes
 
     :rtype: InlineResponse201
     """
-    print("here")
     if connexion.request.is_json:
         body = ParserFormat.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
